--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "files.associations": {
     "iostream": "cpp",
-    "cstdlib": "cpp"
+    "cstdlib": "cpp",
+    "fstream": "cpp"
   },
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
